# ansible-role-ca

./: .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint.yml  README.md  collections.yml  pyproject.toml  requirements.txt  requirements.yml  tasks.yml
.github/workflows/: dev-push-smoke.yml  dev.yml  main-full-gate.yml  main.yml
defaults/: main.yml
docs/: README.md  ca_authority.md  ca_certificate.md  ca_certificate_batch.md  ca_certificate_engine.md  ca_chain.md  ca_crl.md  ca_dhparam.md  ca_file.md  ca_fritzbox_bundle.md  ca_fritzbox_deploy.md  ca_fullchain_bundle.md  ca_inventory.md  ca_pem_bundle.md  ca_pkcs12_bundle.md  ca_profiles.md  ca_publish_archive.md  ca_renewal.md  ca_serial.md  ca_text.md  ca_time.md  ca_validation.md  ca_x509.md  filter_plugins_ca.md  index.md  modules.md  publishing.md
filter_plugins/: ca.py
handlers/: main.yml
meta/: argument_specs.yml  main.yml
module_utils/: ca_certificate_engine.py  ca_file.py  ca_inventory.py  ca_pem_bundle.py  ca_profiles.py  ca_renewal.py  ca_serial.py  ca_text.py  ca_time.py  ca_validation.py  ca_x509.py  ca_x509_common.py  x509_common.py
molecule/all/: molecule.yml
molecule/default/: molecule.yml
molecule/dev/: molecule.yml  prepare.yml
molecule/kvm/: molecule.yml  prepare.yml
molecule/podman/: molecule.yml  prepare.yml
tasks/: assert.yml  authorities.yml  authority.yml  automation.yml  certificates.yml  create.yml  crl.yml  crls.yml  init.yml  main.yml  publish.yml  revoke.yml  tasks.yml
vars/: Archlinux.yml  Debian.yml  RedHat.yml  Suse.yml  main.yml
(+30 files in other folders)
